Fixed scrollbar white corner

--- a/src/css/scrollbar.scss
+++ b/src/css/scrollbar.scss
@@ -39,3 +39,7 @@
   border: solid 3px transparent;
   border-radius: 12px;
 }
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0);
+}
